# tira-harjoitustyo

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
Dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: board.py  game.py  heuristic.py  index.py  index_t.py  index_u.py  minimax.py  peformance.py  performance.py  ui.py
src/game/: game.py  ui.py
src/logic/: board.py  heuristic.py  minimax.py
src/performance/: performance.py
src/tests/: board_test.py  heuristic_test.py  minimax_test.py
