[tool.poetry]
name = "tira-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Joel Weinitchke <joel.weinitschke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
